--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-swiper": "^1.6.0-nightly.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-virtualized-view": "^1.0.0",
